# paco

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindMyMatlab.cmake
docs/: paco_guide.tex
src/: CMakeLists.txt
src/lfrweighted/: CMakeLists.txt  benchm.cpp  benchm.h  binary_benchm.cpp  cast.cpp  cast.h  cc.cpp  combinatorics.cpp  histograms.cpp  histograms.h  lfr.cpp  print.cpp  random.cpp  random.h  set_parameters.cpp  set_parameters.h  standard_include.h  test_benchm.cpp  test_powerlaw.cpp
src/paco/: AgglomerativeOptimizer.cpp  AgglomerativeOptimizer.h  AnnealOptimizer.cpp  AnnealOptimizer.h  AsymptoticModularity.cpp  AsymptoticModularity.h  AsymptoticModularityFunction.cpp  AsymptoticModularityFunction.h  AsymptoticSurprise.cpp  AsymptoticSurprise.h  AsymptoticSurpriseFunction.cpp  AsymptoticSurpriseFunction.h  AsymptoticSurpriseFunction2.cpp  AsymptoticSurpriseFunction2.h  CMakeLists.txt  CMakeLists.txt~  Common.h  Community.cpp  Community.h  ConditionalSurpriseFunction.cpp  ConditionalSurpriseFunction.h  CorrelationModularityFunction.cpp  CorrelationModularityFunction.h  DegreeCorrectedSurpriseFunction.cpp  DegreeCorrectedSurpriseFunction.h  FileLogger.h  Graph.cpp  Graph.h  KLDivergence.cpp  KLDivergence.h  ModularityFunction.cpp  ModularityFunction.h  PartitionHelper.cpp  PartitionHelper.h  QualityFunction.h  QualityFunction2.h  QualityFunctionImpl.h  QualityOptimizer.h  RandomOptimizer.cpp  RandomOptimizer.h  (+34 more)
